[package]
name = "sdk_runner"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0"
deno_ast = "0.51.0"
tempfile = "3.14"
regex = "1.11"
thiserror = { workspace = true }

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
flate2 = "1.0"
tar = "0.4"
zip = "6.0.0"

[lints]
workspace = true
