[package]
name = "sdk_runner"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
deno_ast = { version = "0.51.0", features = ["transpiling"] }
deno_core = "0.363.0"                                         # Match version used by deno_web 0.252.0
deno_console = "0.221.0"                                      # Required by deno_web
deno_url = "0.221.0"                                          # Required by deno_web
deno_webidl = "0.221.0"                                       # Required by deno_web
deno_web = "0.252.0"
tempfile = "3.14"
regex = "1.11"
thiserror = { workspace = true }
tokio = { version = "1.41", features = ["rt", "macros"] }

[build-dependencies]
# No dependencies needed - binaries are committed to git

[lints]
workspace = true
